# NBodySimulator

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini
cmake/: Common.h.in  CompilerSetup.cmake  PlatformDetection.cmake
src/: CMakeLists.txt  NBodySim.cpp
